--- a/css/main.css
+++ b/css/main.css
@@ -2,92 +2,131 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  font-family: 'Roboto', sans-serif;
-  background-image: url(/images/light-blue-background.jpeg);
-  font-size: 2em;
-  color: #fff; }
+  background-color: #cfdce8; }
 
-.p_slider {
-  width: 200px;
-  height: 339px;
+p {
   position: absolute;
+  top: 80px;
+  left: -25px;
+  color: black;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.5em;
+  padding: 30px; }
+
+#slides {
+  position: relative;
+  height: 300px;
+  width: 100vw;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+  display: flex; }
+
+.slide {
+  position: absolute;
+  width: 300px;
+  font-size: 40px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: #333;
+  color: #fff;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: 7px solid;
+  margin: 75px; }
+  .slide img {
+    width: 200px;
+    transform: scale(1);
+    position: relative;
+    animation: scale_bounce 1.2s .4s forwards;
+    -webkit-box-reflect: below 4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255, 255, 255, 0.2)));
+    left: -93px;
+    bottom: 45px; }
+
+.slide {
+  min-width: 120px;
+  width: 100px;
+  height: 40%;
+  -webkit-transition: min-width 1s;
+  -moz-transition: min-width 1s;
+  -o-transition: min-width 1s;
+  transition: min-width 1s; }
+
+.last {
+  right: 55px; }
+
+.first {
+  left: 55px; }
+
+.showing {
+  margin: 0 auto;
   left: 0;
   right: 0;
-  bottom: 0;
-  top: 0;
-  margin: auto; }
-  .p_slider .left, .p_slider .right {
-    cursor: pointer;
-    position: absolute;
-    z-index: 10; }
-  .p_slider__item {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    cursor: pointer;
-    transition-duration: 1.5s;
-    transition-property: transform,left,opacity,-webkit-filter; }
-    .p_slider__item img {
-      width: 200px;
-      transform: scale(0);
-      position: relative;
-      animation: scale_bounce 1.2s .4s forwards; }
-  .p_slider__item:nth-of-type(1) {
-    transform: scale(0.6);
-    left: -200px;
-    -webkit-filter: blur(2px);
-    opacity: 0.8;
-    z-index: 1; }
-  .p_slider__item:nth-of-type(2) {
-    transform: scale(1);
-    left: 0px;
-    z-index: 2; }
-  .p_slider__item:nth-of-type(3) {
-    transform: scale(0.6);
-    left: 200px;
-    z-index: 1;
-    -webkit-filter: blur(2px);
-    opacity: 0.8; }
+  transform: scale(2);
+  z-index: 2;
+  height: 80%;
+  width: 180px;
+  top: 35px; }
+  .showing img {
+    width: 300px;
+    bottom: 35px; }
+  .showingimg.hacksaw {
+    bottom: 70px; }
+  .showing p {
+    color: white;
+    top: 140px;
+    left: 100px;
+    font-size: 0.6em; }
+  .showing p.hacksaw-text {
+    left: 30px; }
+  .showing p.chainsaw-text {
+    left: 25px; }
+  .showing p.grip-text {
+    left: 83px; }
 
 .controls {
+  display: inline-block; }
+
+.slide:nth-of-type(1) {
+  z-index: 1; }
+
+.slide:nth-of-type(2) {
+  z-index: 1; }
+
+.slide:nth-of-type(3) {
+  z-index: 1; }
+
+.controls {
+  background-color: transparent;
+  color: darkslategray;
+  border: none;
+  padding: 20px 0px;
+  font-size: 80px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  margin: 10px 0px 0px 10px;
+  width: 70px;
+  border: none; }
+
+.controls:hover,
+.controls:focus {
+  border: none;
+  outline: none; }
+
+.container {
+  position: relative;
+  top: 25vh; }
+
+.buttons {
   position: absolute;
   width: 100%;
-  top: 50%;
-  transform: translateY(-50%); }
-  .controls .left {
-    float: left;
-    cursor: pointer;
-    position: relative;
-    left: 40px; }
-    .controls .left img {
-      transform: rotate(180deg);
-      transition: all .4s;
-      opacity: 0.2; }
-      .controls .left img:hover {
-        opacity: 1;
-        cursor: pointer; }
-  .controls .right {
-    float: right;
-    cursor: pointer;
-    position: relative;
-    right: 40px; }
-    .controls .right img {
-      transition: all .4s;
-      opacity: 0.2; }
-      .controls .right img:hover {
-        opacity: 1;
-        cursor: pointer; }
+  left: 0px;
+  top: 20%;
+  z-index: 10;
+  font-size: 0px; }
+  .buttons:hover {
+    background-color: transparent; }
 
-@keyframes scale_bounce {
-  0% {
-    transform: scale(0); }
-  20% {
-    transform: scale(1.1); }
-  40% {
-    transform: scale(0.98); }
-  60% {
-    transform: scale(1.012); }
-  80% {
-    transform: scale(0.995); }
-  100% {
-    transform: scale(1); } }
+button#next {
+  float: right; }
