--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,12 @@
-body{
+body {
   margin:0;
   padding:0;
   height:100vh;
-  background-color: #cfdce8;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  background-image: url('https://s.tmimgcdn.com/blog/wp-content/uploads/2014/09/5-Blurred-Backgrounds.jpg');
+  background-size: cover;
 }
 p {
   position: absolute;
@@ -13,107 +17,152 @@ p {
   font-size: 0.5em;
   padding: 30px;
 }
-#slides{
-    position: relative;
-    height: 300px;
-    width: 100vw;
-    padding: 0px;
-    margin: 0px;
-    list-style-type: none;
-    display: flex;
+#slides {
+  position: relative;
+  height: 300px;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+  display: flex;
 }
+.slide {
+  //position: absolute;
+  width: 300px;
+  font-size: 40px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: #333;
+  color: #fff;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: 7px solid;
+  margin: 75px;
+  top: 15px;
 
+  &-desciption {
+    display: none;
+  }
 
-.slide{
-    position: absolute;
-    width: 300px;
-    font-size: 40px;
-    padding: 40px;
-    box-sizing: border-box;
-    background: #333;
-    color: #fff;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    border: 7px solid;
-    margin: 75px;
-    img{
-      width:200px;
-      transform:scale(1);
-      position:relative;
-      //transition:top 1s;
-      animation:scale_bounce 1.2s .4s forwards;
-      -webkit-box-reflect: below 4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
-      left: -93px;
-      bottom: 45px;
-    }
+  img {
+    width:200px;
+    transform:scale(1);
+    position:relative;
+    //transition:top 1s;
+    animation:scale_bounce 1.2s .4s forwards;
+    -webkit-box-reflect:
+    below
+    4px
+    -webkit-gradient(linear, left top, left bottom, from(transparent),
+    color-stop(50%, transparent), to(rgba(255,255,255,0.2)));
+    left: -93px;
+    bottom: 45px;
+  }
+  .hacksaw {
+    bottom: 60px;
+  }
 }
-.slide{
-    min-width: 120px;
-    width: 100px;
-    height: 40%;
-    -webkit-transition: min-width 1s;
-    -moz-transition: min-width 1s;
-    -o-transition: min-width 1s;
-    transition: min-width 1s;
+.slide {
+  position: absolute;
+  min-width: 120px;
+  width: 100px;
+  height: 40%;
+  tet-align: center;
+  //background-color: #D4E1EA;
+  transition: 2s ease-in-out;
 }
 
 .last {
-    right: 55px;
+  animation: moveRight 4s;
+  transform:translateX(75vw);
 }
+
 .first {
-    left: 55px;
+  animation: moveLeft 4s;
+  transform:translateX(5vw);
 }
-//reason
+
 .showing {
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    transform:scale(2);
-    z-index:2;
-    height: 80%;
-    width: 180px;
+  margin: 0 auto;
+  transform:scale(2);
+  transform:translateX(45vw);
+  height: 70vh;
+  width: 350px;
+  top: -72px;
+  left: -100px;
+  border: 11px solid;
+  &.slide-desciption {
+    display: block;
+    top: 66vh;
+    width: 400px;
+    left: 1vw;
+    font-size: 0.4em;
+    color: lightgray;
+  }
+  &.slide-text-grip {
+    left: 230px;
+  }
+  /*  &:before {
+  content:"";
+  position: absolute;
+  border: 1px solid white;
+  width: 100%;
+  height: 100%;
+  top: -30px;
+  right: -30px;
+} */
+  &:after {
+    content: "";
+    background-image: url(/images/shopping-basket.svg);
+    background-size: 35px;
+    background-color: white;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    border-radius: 50%;
+    top: 10%;
+    left: -35px;
+    box-shadow: 0 0 10px grey;
+    background-position: 50% 45%;
+  }
+  img {
+    width: 650px;
+    top: 25px;
+  }
+  .hacksaw {
+    top: -40px;
+    left: -200px;
+  }
+  .grip {
+    top: -10px;
+    left: -185px;
+  }
+  .chainsaw {
     top: 35px;
-    img {
-      width: 300px;
-      bottom: 35px;
+    left: -160px;
+  }
+  p {
+    color: white;
+    top: 383px;
+    left: 166px;
+    font-size: 0.7em;
+    &.hacksaw-text {
+      left: 30px;
     }
-    &img.hacksaw {
-      bottom: 70px;
+    &.chainsaw-text {
+      left: 25px;
     }
-    & p {
-      color: white;
-      top: 140px;
-      left: 100px;
-      font-size: 0.6em;
+    &.slide-text-grip {
+      left: 230px;
     }
-    & p.hacksaw-text {
-    left: 30px;
-    }
-    & p.chainsaw-text {
-    left: 25px;
-    }
-    & p.grip-text {
-    left: 83px;
-    }
+  }
 }
 
 .controls {
-  display: inline-block
-}
-.slide:nth-of-type(1){
-    z-index:1;
-}
-
-.slide:nth-of-type(2){
-    z-index:1;
-}
-
-.slide:nth-of-type(3){
-  z-index:1;
-}
-
-.controls{
+  display: inline-block;
   background-color: transparent;
   color: darkslategray;
   border: none;
@@ -124,20 +173,19 @@ p {
   margin: 10px 0px 0px 10px;
   width: 70px;
   border: none;
+
+  &:hover, :focus {
+    border: none;
+    outline:none;
+  }
 }
 
-.controls:hover,
-.controls:focus{
-  border: none;
-  outline:none;
-}
-
-.container{
+.container {
   position: relative;
   top: 25vh;
 }
 
-.buttons{
+.buttons {
   position: absolute;
   width: 100%;
   left: 0px;
@@ -150,5 +198,5 @@ p {
 
 }
 button#next {
-    float: right;
+  float: right;
 }
