--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,7 +41,6 @@ p {
   background: #333;
   color: #fff;
   background-size: contain;
-  background-repeat: no-repeat;
   background-color: transparent;
   border: 7px solid;
   margin: 75px;
@@ -121,13 +120,12 @@ p {
     background-position: 50% 45%;
   }
   // Slider Showing Description
-  .slide-description {
+  & .slide-description {
     display: block;
-    top: 66vh;
     width: 400px;
-    left: 1vw;
     font-size: 0.4em;
     color: lightgray;
+    text-align: start;
   }
 
   &-text-grip {
@@ -146,19 +144,7 @@ p {
   //Showing paragraph
   p {
     color: white;
-    top: 383px;
-    left: 166px;
     font-size: 0.7em;
-
-    &.hacksaw-text {
-      left: 30px;
-    }
-    &.chainsaw-text {
-      left: 25px;
-    }
-    &.slide-text-grip {
-      left: 230px;
-    }
   }
 }
 
@@ -221,7 +207,6 @@ button#next {
 
   body {
     height: 200vh;
-    background-repeat: no-repeat;
   }
 
   .first {
@@ -233,6 +218,16 @@ button#next {
     width: 45%;
     top: -150px;
 
+    & .slide-description { 
+      display: block;
+      width: 48vw;
+      padding-top: 3vh;
+      font-size: 0.4em;
+    }
+    & .slide-img-hacksaw {
+      top: 75px;
+      padding-top: 0;
+    }
     & p {
       top: 438px;
       left: 80px;
@@ -240,6 +235,15 @@ button#next {
 
       &.slide-text-grip {
         left: 50%;
+      }
+      &.slide-text-hacksaw {
+        padding-top: 32px;
+      }
+      &.slide-text-chainsaw {
+        padding-top: 6px;
+      }
+      &.slide-text-grip {
+        padding-top: 12px;
       }
     }
     & img {
@@ -276,6 +280,21 @@ button#next {
     & .slide-img-chainsaw {
     top: -1vh;
     }
+    & .slide-text-chainsaw {
+      margin-top: 0.3em;
+      margin-left: 5.5em;
+    }
+    & .slide-text-grip {
+      margin-top: 0.5em;
+      margin-left: 8em;
+    }
+    & .slide-text-hacksaw {
+      margin-top: -2.2em;
+      margin-left: 5.7em;
+    }
+    & .slide-description {
+      text-align: start;
+    }
   }
   .last {
     display: none;
@@ -284,5 +303,24 @@ button#next {
 
 /*DESKTOP QUERIES*/
 @include breakpoint(desktop) {
-
+  .showing {
+    p {
+  
+      &.slide-text-chainsaw {
+        margin-top: -0.1em;
+        margin-left: 2.6em;
+        font-size: 1em;
+      }
+      &.slide-text-hacksaw {
+        margin-top: -2.6em;
+        margin-left: 2.8em;
+        font-size: 1em;
+      }
+      &.slide-text-grip {
+        margin-top: 0.2em;
+        margin-left: 5em;
+        font-size: 1em;
+      }
+    }
+  }
 }
